--- a/lightgbm.ipynb
+++ b/lightgbm.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\apps\\Anaconda3\\envs\\hello\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3058: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -17,6 +17,8 @@
    "source": [
     "import pandas as pd, numpy as np, time\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "import lightgbm as lgb\n",
+    "from sklearn import metrics\n",
     "\n",
     "data = pd.read_csv(\"../flights.csv\")\n",
     "data = data.sample(frac = 0.1, random_state=10)\n",
@@ -37,55 +39,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 27 candidates, totalling 81 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed: 11.0min\n"
-     ]
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score='raise-deprecating',\n",
+       "             estimator=LGBMClassifier(boosting_type='gbdt', class_weight=None,\n",
+       "                                      colsample_bytree=1.0,\n",
+       "                                      importance_type='split',\n",
+       "                                      learning_rate=0.1, max_depth=-1,\n",
+       "                                      min_child_samples=20,\n",
+       "                                      min_child_weight=0.001,\n",
+       "                                      min_split_gain=0.0, n_estimators=100,\n",
+       "                                      n_jobs=-1, num_leaves=31, objective=None,\n",
+       "                                      random_state=None, reg_alpha=0.0,\n",
+       "                                      reg_lambda=0.0, silent=False,\n",
+       "                                      subsample=1.0, subsample_for_bin=200000,\n",
+       "                                      subsample_freq=0),\n",
+       "             iid='warn', n_jobs=-1,\n",
+       "             param_grid={'learning_rate': [0.01, 0.05, 0.1],\n",
+       "                         'max_depth': [25, 50, 75], 'n_estimators': [200, 300],\n",
+       "                         'num_leaves': [300, 900, 1200]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='roc_auc', verbose=0)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import lightgbm as lgb\n",
-    "from sklearn import metrics\n",
-    "\n",
     "def auc2(m, train, test): \n",
     "    return (metrics.roc_auc_score(y_train,m.predict(train)),\n",
     "                            metrics.roc_auc_score(y_test,m.predict(test)))\n",
     "\n",
     "lg = lgb.LGBMClassifier(silent=False)\n",
-    "param_dist = {\"max_depth\": [25,50, 75],\n",
+    "param_dist = {\"max_depth\": [25, 50, 75],\n",
     "              \"learning_rate\" : [0.01,0.05,0.1],\n",
     "              \"num_leaves\": [300,900,1200],\n",
-    "              \"n_estimators\": [200]\n",
+    "              \"n_estimators\": [200, 300]\n",
     "             }\n",
-    "grid_search = GridSearchCV(lg, n_jobs=-1, param_grid=param_dist, cv = 3, scoring=\"roc_auc\", verbose=5)\n",
-    "grid_search.fit(train,y_train)\n",
-    "grid_search.best_estimator_\n",
-    "\n",
-    "d_train = lgb.Dataset(train, label=y_train)\n",
+    "grid_search = GridSearchCV(lg, n_jobs=-1, param_grid=param_dist, cv = 3, scoring=\"roc_auc\")\n",
+    "grid_search.fit(train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LGBMClassifier(boosting_type='gbdt', class_weight=None, colsample_bytree=1.0,\n",
+       "               importance_type='split', learning_rate=0.05, max_depth=75,\n",
+       "               min_child_samples=20, min_child_weight=0.001, min_split_gain=0.0,\n",
+       "               n_estimators=300, n_jobs=-1, num_leaves=1200, objective=None,\n",
+       "               random_state=None, reg_alpha=0.0, reg_lambda=0.0, silent=False,\n",
+       "               subsample=1.0, subsample_for_bin=200000, subsample_freq=0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/lightgbm/engine.py:148: UserWarning: Found `n_estimators` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9813891619762243, 0.7850159220067868)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_train = lgb.Dataset(train, label=y_train, free_raw_data=False)\n",
     "params = {\"max_depth\": 50, \"learning_rate\" : 0.1, \"num_leaves\": 900,  \"n_estimators\": 300}\n",
     "\n",
     "# Without Categorical Features\n",
     "model2 = lgb.train(params, d_train)\n",
-    "auc2(model2, train, test)\n",
-    "\n",
+    "auc2(model2, train, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/lightgbm/engine.py:148: UserWarning: Found `n_estimators` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n",
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/lightgbm/basic.py:1247: UserWarning: categorical_feature in Dataset is overridden.\n",
+      "New categorical_feature is ['AIRLINE', 'DAY', 'DAY_OF_WEEK', 'DESTINATION_AIRPORT', 'MONTH', 'ORIGIN_AIRPORT']\n",
+      "  'New categorical_feature is {}'.format(sorted(list(categorical_feature))))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9980574670228884, 0.7723387943662737)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# With Catgeorical Features\n",
     "cate_features_name = [\"MONTH\",\"DAY\",\"DAY_OF_WEEK\",\"AIRLINE\",\"DESTINATION_AIRPORT\",\n",
     "                 \"ORIGIN_AIRPORT\"]\n",
-    "model2 = lgb.train(params, d_train, categorical_feature = cate_features_name)\n",
-    "auc2(model2, train, test)"
+    "model3 = lgb.train(params, d_train, categorical_feature = cate_features_name)\n",
+    "auc2(model3, train, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/lightgbm/engine.py:148: UserWarning: Found `n_estimators` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n",
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/lightgbm/basic.py:1243: UserWarning: Using categorical_feature in Dataset.\n",
+      "  warnings.warn('Using categorical_feature in Dataset.')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9957872710154854, 0.7793998143857874)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = {\"max_depth\": 75, \"learning_rate\" : 0.05, \"num_leaves\": 1200,  \"n_estimators\": 300}\n",
+    "model21 = lgb.train(params, d_train)\n",
+    "auc2(model21, train, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/mypy37/lib/python3.7/site-packages/lightgbm/engine.py:148: UserWarning: Found `n_estimators` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.9957872710154854, 0.7793998143857874)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model31 = lgb.train(params, d_train, categorical_feature = cate_features_name)\n",
+    "auc2(model31, train, test)"
    ]
   },
   {
